style.css
/* ... */
input[type="text"]:focus,
textarea:focus {
  outline: 1px solid rgb(90, 90, 90);
}
input[type="text"]::placeholder {
  color: var(--secondaryText);
}
textarea {
  resize: none;
  width: 100%;
  box-sizing: border-box;
}
.days,
.weekDays {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  height: fit-content;
  width: 100%;
}
.weekDays {
  border-bottom: 3px solid var(--background);
  margin-bottom: 10px;
}
.weekDay,
.day {
  display: flex;
  background-color: var(--background);
  font-size: 23px;
  width: 30px;
  height: 30px;
  margin: 20px auto;
  border-radius: 50%;
  justify-content: center;
  align-items: center;
  padding: 10px;
  user-select: none;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
}
.trackedDay {
  background-color: var(--secondaryTransparent);
}
.weekDay {
  background-color: transparent;
  margin-top: 10px;
}
.otherMonthDay {
  opacity: 0.3;
  pointer-events: none;
}
.completedDay {
  background-color: var(--primary);
}
.calanderControlls {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 5px;
}
.yearAndMonth {
  position: relative;
  display: flex;
  border-radius: 30px;
  padding: 5px;
  transition: 300ms;
  background-color: var(--secondaryBackgroundTransparent);
  border-radius: 10px;
}
.yearAndMonth > i {
  font-size: 20px;
  margin: 0 10px 0 3px;
}
.calanderButtons {
  display: flex;
}
.calanderButtons > *,
.report-controlls-right > * {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  font-size: 22px;
  margin: 10px 10px;
  margin-right: 0;
  border: 1px solid var(--lightBorder);
  background: var(--secondaryBackgroundTransparent);
  border-radius: 50%;
  cursor: pointer;
  transition: 500ms;
  transition-property: background-color, border-radius, color;
}
.yearAndMonth > *,
.report-date > * {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 30px;
  padding: 3px 10px;
  margin: 0px 0;
  font-weight: bold;
  user-select: none;
}
.yearControlls,
.monthControlls {
  border-radius: 7px;
  transition: 500ms;
}
.line {
  width: 2px;
  padding: 0;
  margin: 5px 5px;
  background-color: var(--primary);
}
.yearAndMonth > i {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5px;
  padding: 0;
}
.profileContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}
.loginBtn {
  color: var(--textColor);
  padding: 10px 40px;
  border: 2px solid var(--primary);
  font-size: 22px;
  border-radius: 30px;
  transition: 500ms;
  display: flex;
  justify-content: center;
  width: min-content;
  box-sizing: border-box;
}
.themeContainer {
  margin: 10px 0;
  padding-bottom: 10px;
  width: 100%;
  border-bottom: 1px solid var(--background);
  display: flex;
  align-items: center;
}
.theme-title {
  font-size: 23px;
  padding-right: 10px;
}
.theme-circle {
  position: relative;
  width: min-content;
  background: white;
  padding: 5px 10px;
  margin: 5px;
  border-radius: 20px;
  font-size: .7em;
  transition: 300ms;
  font-weight: bold;
  text-wrap: nowrap;
  border: 2px solid transparent;
}
.theme-circle:hover {
  cursor: pointer;
  border-radius: 7px;
  border: 2px solid rgba(255, 255, 255, 0.619);
}
.theme1 {
  background-color: #ff6000;
}
.theme2 {
  background-color: rgb(0, 156, 140);
}
.theme3 {
  background-color: purple;
}
.themeSelected{
  box-sizing: border-box;
  border: 2px solid white !important;
}
.report-date {
  display: flex;
  font-size: 20px;
  margin: 0;
}
.report-date > *:not(:last-child) {
  border-right: 1px solid var(--primary);
}
.report-controlls > .left {
  display: flex;
  align-items: center;
}
.report-controlls-right > :nth-child(1) {
  font-size: 18px;
}
.report-controlls {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 5px;
}
.left {
  border-radius: 30px;
  height: 30px;
  padding: 10px 0;
  padding-right: 15px;
  transition: 500ms;
}
.report-controlls-right > *,
.report-controlls-right {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  align-items: center;
  z-index: 4;
}
.yes-no-button {
  font-size: 18px;
  display: flex;
  align-items: center;
  background-color: var(--secondaryBackgroundTransparent);
  width: fit-content;
  padding: 3px;
  border-radius: 30px;
  user-select: none;
  margin: 10px 0;
  border: 1px solid var(--lightBorder);
}
.yes-no-button > * {
  padding: 5px;
  width: 40px;
  display: flex;
  justify-content: center;
  color: var(--textColor);
  z-index: 2;
  cursor: pointer;
}
.indicator {
  width: 50px;
  height: 32px;
  background-color: var(--primaryTransparent);
  position: absolute;
  padding: 0;
  transition: 300ms;
  border-radius: 30px;
  z-index: 1;
  transform: translate(50px);
}
.indicator-off {
  transform: translate(0px);
}
.selectedYesNoBtn {
  cursor: default;
}
.selectedDay {
  position: relative;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
}
.selectedDay:before {
  content: " ";
  position: absolute;
  z-index: 1;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid var(--primary);
  border-radius: 50%;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
}
.editControlls > *,
.detailedControllsContainer > * {
  display: flex;
  margin: 2px 0;
}
.detailedControllsContainer {
  flex-direction: column;
}
.positionControlls,
.detailedControlls {
  display: flex;
  justify-content: center;
  align-items: center;
}
.positionControlls {
  margin-right: auto;
}
.editControlls,
.report-controlls-right {
  -webkit-transition: all 200ms linear;
  -moz-transition: all 200ms linear;
  -o-transition: all 200ms linear;
  transition: all 200ms linear;
}
.editControlls input[type="text"] {
  font-size: 16px;
}
/* ... */

